--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,11 @@
 .firsttext{
     line-height: 1.2;
     word-spacing: -0.2px;
-    /* font-size: 1em; */
     letter-spacing: -0.8px;
+}
+.savetext{
+    word-spacing: -0.2px;
+    letter-spacing: -0.5px;
 
 }
 
